--- a/.gitignore
+++ b/.gitignore
@@ -27,11 +27,16 @@ coverage
 build/Release
 
 # Dependency directories
-node_modules
-jspm_packages
+/node_modules
+/jspm_packages
+/bower_components/*
 
 # Optional npm cache directory
 .npm
 
 # Optional REPL history
 .node_repl_history
+
+# compiled output
+/dist
+/tmp
